Fixed modal animation for left and right. Moved overflow animations to overflow.styl.

--- a/src/styl/drawer/drawer.styl
+++ b/src/styl/drawer/drawer.styl
@@ -1,4 +1,5 @@
 @require 'drawer-settings.styl';
+@require '../animation/overflow.styl';
 
 $drawer-transition-duration = $drawer-fade-duration + $drawer-slide-duration;
 
@@ -116,14 +117,5 @@ $drawer-transition-duration = $drawer-fade-duration + $drawer-slide-duration;
                 transform: none;
             }
         }
-    }
-}
-
-@keyframes overflow-y-scroll {
-    from {
-        overflow-y: hidden;
-    }
-    to {
-        overflow-y: hidden;
     }
 }
