--- a/src/styl/modal/modal.styl
+++ b/src/styl/modal/modal.styl
@@ -1,5 +1,6 @@
 @require "modal-settings.styl";
 @require "../grid/container.styl";
+@require '../animation/overflow.styl';
 
 $modal-margin-right = -1 * $modal-width / 2;
 $modal-transition-duration = $modal-fade-duration + $modal-slide-duration;
@@ -14,9 +15,10 @@ $modal-transition-duration = $modal-fade-duration + $modal-slide-duration;
     bottom: 0;
     left: 0;
     visibility: hidden;
-    overflow-y: visible;
-    transition-property: visibility, overflow;
-    transition-duration: $modal-transition-duration, $modal-transition-duration;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    transition-property: visibility;
+    transition-duration: $modal-transition-duration;
     will-change: visibility;
 
     .modal-background
@@ -170,6 +172,9 @@ $modal-transition-duration = $modal-fade-duration + $modal-slide-duration;
 modal-floating($min-width = false)
     &.modal-open
         overflow-y: scroll;
+        overflow-x: visible;
+        animation-name: overflow-x-scroll;
+        animation-duration: $modal-transition-duration;
 
     .modal-content
         position: relative;
